@@ -33,9 +33,18 @@ public interface IModuleTabView extends IModulePageView {
 
     /**
      * Set the context that this tab exists in.
-     * @param parentPanel Parent tab layout panel
+     * @param parentPanel Parent tab panel view
      * @param tabIndex    Index of this tab on the layout panel
      */
+    void setContext(IModuleTabPanelView parentView, int tabIndex);
+
+    /**
+     * Set the context that this tab exists in.
+     * @param parentPanel Parent tab layout panel
+     * @param tabIndex    Index of this tab on the layout panel
+     * @deprecated Use setContext(IModuleTabPanelView parentView, tabIndex) instead.
+     */
+    @Deprecated
     void setContext(TabLayoutPanel parentPanel, int tabIndex);
 
     /** Disable the tab, so it no longer handles selection events. */
@@ -46,6 +55,9 @@ public interface IModuleTabView extends IModulePageView {
 
     /** Get the parent TabLayoutPanel. */
     TabLayoutPanel getParentPanel();
+
+    /** Get the parent module tab panel view. */
+    IModuleTabPanelView getParentView();
 
     /** Get the history token for this tab, or null for no history. */
     String getHistoryToken();
